--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
-    "expo-speech": "~10.3.0"
+    "expo-speech": "~10.3.0",
+    "expo-updates": "~0.14.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
